Fix Print Preview Alt + Left Arrow breakage

Fixing print preview closing in g-mail bug caused ALT + left
arrow to break for certain cases. Changed condition for not
closing dialog to be more specific.

BUG=634237

Review-Url: https://codereview.chromium.org/2215063002
Cr-Commit-Position: refs/heads/master@{#410717}

Former-commit-id: d65b6608c1349ba70606565b2bed9ff8b016473a